# restaurant-pos

./: .containerignore  .env.example  .gitignore  README.md  compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  test_table.py
backend/common/: __init__.py  database.py  events.py  exceptions.py  repository.py
backend/hero/: __init__.py  controller.py  models.py
backend/menu/: __init__.py  models.py  repository.py  router.py
backend/menu/models/: __init__.py  menu.py  menu_record.py
backend/menu/routers/: __init__.py  menu_item_router.py  menu_modifier_router.py
backend/migrations/: env.py
backend/migrations/versions/: 001_combine_menu_tables.py  002_add_order_tables.py  07dc278f789f_add_password_length_limit.py  235b6af42d2b_add_notes_to_orderitemlist.py  7e699a0f25cb_update_user_model.py  cf47956736ae_add_password_hash_to_user.py
backend/order/: router.py
backend/order/models/: __init__.py  order.py  order_line_item.py  order_status.py  order_tables.py  order_with_line_items.py  tables.py
backend/order/repositories/: __init__.py  order_line_item_repository.py  order_repository.py
backend/order/routers/: __init__.py  order_line_item_router.py  (+1 more)
backend/table/: __init__.py  controller.py  models.py  repository.py  router.py  service.py
backend/tests/: conftest.py  test_menu_items.py  test_menu_modifiers.py  test_order.py  test_table.py  test_user.py
backend/user/: __init__.py  auth_utils.py  controller.py  dependencies.py  models.py  repository.py  router.py
(+216 files in other folders)
